--- a/style.css
+++ b/style.css
@@ -175,21 +175,34 @@ i {
 .btn-hold { top: 467px;}
 
 .dice {
-    position: absolute;
-    left: 50%;
-    top: 255px;
-    transform: translateX(-50%);
+    display: block;
+    position: relative;
     height: 100px;
+    margin: 5px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
 .dice2 {
-    position: absolute;
-    left: 50%;
-    top: 145px;
-    transform: translateX(-50%);
+    display: block;
+    position: relative;
+    margin: 5px;
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+.dices {
+    position: absolute;
+    left: 50%;
+    top: 150px;
+    transform: translateX(-50%);
+    margin: 0;
+    padding:0;
+
+}
+
+.dices.warning {
+    box-shadow: 5px 5px 5px 5px rgba(255, 0, 0, 0.3);
+    border-radius: 5px;
 }
 
 .winner { background-color: #f7f7f7; }
